--- a/index.html
+++ b/index.html
@@ -15,4 +15,7 @@
     <div>
         <img src="image4.jpg" alt="Image 4" >
     </div>
+     <div>
+        <img src="5.jpg" alt="Image 5">
+    </div>
 </body>
